Refactor code structure for improved readability and maintainability

--- a/assets/.env
+++ b/assets/.env
@@ -1,3 +1,9 @@
 SAMPLE_KEY=sample_value
 API_URL=https://api.alhalqoh.com
 SHOW_COMING_SOON=true
+
+# Feature flags
+SHOW_PROGRAM=false
+SHOW_PENGUMUMAN=false
+SHOW_ALAT_PELAJARAN=false
+SHOW_SETORAN=false
