--- a/assets/.env.android
+++ b/assets/.env.android
@@ -1,2 +1,7 @@
 API_URL=http://10.0.2.2
 API_HOST_URL=teman-ngaji-be.test
+
+SHOW_PROGRAM=true
+SHOW_PENGUMUMAN=false
+SHOW_ALAT_PELAJARAN=false
+SHOW_SETORAN=false
