--- a/assets/.env.prod
+++ b/assets/.env.prod
@@ -1,3 +1,8 @@
 # Ganti dengan URL API production Anda yang sebenarnya
 API_URL=https://www.alhalqoh.com
 SHOW_COMING_SOON=true
+
+SHOW_PROGRAM=true
+SHOW_PENGUMUMAN=false
+SHOW_ALAT_PELAJARAN=false
+SHOW_SETORAN=false
